--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Broadway</title>
+    <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
-
+    <h1>Broadway Design</h1>
+    <div class="topnav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Process</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <h2>Our Process</h2>
+    <img src="resources/images/identify.svg" alt="identify">
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+    <img src="resources/images/understand.svg" alt="understand">
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+    <img src="resources/images/execute.svg" alt="execute">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
+    <h3>Designed in New York</h3>
+    <h3>Portfolio</h3>
+    <p>Coming Soon!</p>
+    <h3>Team</h3>
+    <p>We're Hiring</p>
+    <h3>Contact</h3>
+    <p>Phone: (555)555-5555<br /><br />E-mail: test@example.com<br /><br />Twitter: @test</p>
+    <h5 class="copyright">&copy; Broadway 2016</h5>
+    <div class="botnav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Process</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
   </body>
 </html>
